drivers: sc16is7xx: Add family driver
tbd

Signed-off-by: Caspar Friedrich <c.s.w.friedrich@gmail.com>

--- a/drivers/serial/CMakeLists.txt
+++ b/drivers/serial/CMakeLists.txt
@@ -65,6 +65,9 @@ zephyr_library_sources_ifdef(CONFIG_UART_RV32M1_LPUART uart_rv32m1_lpuart.c)
 zephyr_library_sources_ifdef(CONFIG_UART_RZT2M uart_rzt2m.c)
 zephyr_library_sources_ifdef(CONFIG_UART_SAM uart_sam.c)
 zephyr_library_sources_ifdef(CONFIG_UART_SAM0 uart_sam0.c)
+zephyr_library_sources_ifdef(CONFIG_UART_SC16IS7XX uart_sc16is7xx.c)
+zephyr_library_sources_ifdef(CONFIG_UART_SC16IS7XX_GPIO uart_sc16is7xx_gpio.c)
+zephyr_library_sources_ifdef(CONFIG_UART_SC16IS7XX_UART uart_sc16is7xx_uart.c)
 zephyr_library_sources_ifdef(CONFIG_UART_SCI_RA uart_renesas_ra_sci.c)
 zephyr_library_sources_ifdef(CONFIG_UART_SEDI uart_sedi.c)
 zephyr_library_sources_ifdef(CONFIG_UART_SI32_USART uart_si32_usart.c)
